src/golden/cards/templates/nested/errors/test.golden/cannotSendToVar.fl
	card CannotSendToVar
		state 
			MyX x
		
		template top
			hold <- x => x
